--- a/Traffic Management/src/traffic.conf
+++ b/Traffic Management/src/traffic.conf
@@ -11,15 +11,15 @@
 # Simulation class:
 #	Exponential Car Insertion Rate
 #	Number of Cars
-Lambda			10
-NumberOfCars	30
+Lambda			30
+NumberOfCars	1000
 
 # Grid class:
 #	Number of Streets and Avenues
 #	Maximum and Minimum Block Side Length in c unit
 NumberOfStreets		3
 NumberOfAvenues		3
-MaximumBlockSide	40
+MaximumBlockSide	25
 MinimumBlockSide	25
 
 # Road class:
@@ -36,7 +36,7 @@ NumberOfTurningLanes	1
 MaxRedTime		7000
 MaxGreenTime	5000
 YellowTime		2000
-SchedulingScheme	83
+ScheulingScheme	86
 
 # Car class:
 #	Maximum Car Speed in c/second unit
